--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,21 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<router-outlet></router-outlet>
+<div class="app-container">
+    <div class="main-toolbar-container">
+        <mat-toolbar>
+            <span>Home</span>
+        </mat-toolbar>
+    </div>
+    <div class="main-page-container">
+        <div class="side-nav-container">
+            <mat-sidenav-container style="height:inherit">
+                <mat-sidenav>Start</mat-sidenav>
+                <mat-sidenav-content>Main</mat-sidenav-content>
+            </mat-sidenav-container>
+        </div>
+        <div class="main-content-container">
+         <router-outlet style="height:inherit"></router-outlet>
+        </div>
+    </div>
+</div>
